--- a/StudentManagement.Server.csproj
+++ b/StudentManagement.Server.csproj
@@ -7,20 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies"
-                          Version="7.0.14" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools"
-                          Version="7.0.14">
+        <PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.14" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
             <PrivateAssets>all</PrivateAssets>
             <!--Turn this on later-->
             <!--<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
         </PackageReference>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"
-                          Version="7.0.11" />
-        <PackageReference Include="Swashbuckle.AspNetCore"
-                          Version="6.5.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Annotations"
-                          Version="6.5.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
