api auth and api file

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,10 @@
     "Issuer": "",
     "Audience": "",
     "Key": "hehe"
+  },
+  "Cloudinary": {
+    "CloudName": "dkxa34ntr",
+    "ApiKey": "295874854515153",
+    "ApiSecret": "fSP_TbC46wLfF8qibRPBTazjl0Y"
   }
 }
