--- a/StudentManagement.Server.csproj
+++ b/StudentManagement.Server.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CloudinaryDotNet" Version="1.24.0" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.14" />
