add authentication and uploadfile api

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "",
+    "Audience": "",
+    "Key": "key_jwt_secret_a_is_this"
+  },
+  "Cloudinary": {
+    "CloudName": "dkxa34ntr",
+    "ApiKey": "295874854515153",
+    "ApiSecret": "fSP_TbC46wLfF8qibRPBTazjl0Y"
+  }
 }
