--- a/StudentManagement.Server.csproj
+++ b/StudentManagement.Server.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CloudinaryDotNet"
+                          Version="1.24.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"
+                          Version="6.0.25" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies"
                           Version="7.0.14" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools"
