--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,15 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Issuer": "",
+        "Audience": "",
+        "Key": "key_jwt_secret_a_is_this"
+    },
+    "Cloudinary": {
+        "CloudName": "dkxa34ntr",
+        "ApiKey": "295874854515153",
+        "ApiSecret": "fSP_TbC46wLfF8qibRPBTazjl0Y"
+    }
 }
